correccion index.html

--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@ h4{
         <div class="main-content">
             <section class="section">
                 <h4>ACERCA DE NOSOTROS</h4>
-                <img src="img/AcercaD.jpg" alt="Acerca De nosotros" height="200" width="200">
+                <img src="Img/AcercaD.jpg" alt="Acerca De nosotros" height="200" width="200">
                 <p>Somos una empresa que permite a usuarios de diferentes partes del mundo crear sus propios crowdfunding con la intención de darles la oportunidad a diferentes personas que buscan ayudar de manera segura.</p>
             </section>
 
             <section class="section">
                 <h4>Objetivo</h4>
-                <img src="img/objetivo.jpg" alt="Objetivo" height="200" width="200">
+                <img src="Img/objetivo.jpg" alt="Objetivo" height="200" width="200">
                 <p>Nuestro objetivo es llegar a cada rincón del mundo que necesite ayuda y a quienes deseen ayudar, asegurando que sus fondos estén seguros y dándoles la libertad de crear sus propias campañas y promocionarlas.</p>
             </section>
 
