--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h4{
 
             <section class="section">
                 <h4>Crowdfunding para recuperar y reparar The Mud House Studio</h4>
-                <img src="img/Fondos.jpg" alt="Fondo" height="200" width="200">
+                <img src="Img/Fondos.jpg" alt="Fondo" height="200" width="200">
                 <p>Se realizó un crowdfunding para reparar la famosa Mud House Studio.</p>
                 <details>
                     <summary>Dale click para veisualizar más información</summary>
