--- a/Donación.html
+++ b/Donación.html
@@ -146,7 +146,7 @@ div>liv,a{ /*selector combiandor hijos*/
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <img src="Img/logo.png" alt="Logo de FutureGo" class="logo">
+                <img src="Img/Logo.png" alt="Logo de FutureGo" class="logo">
                 <h1>FutureGo</h1>
             </div>
             <nav>
