--- a/SEG1.html
+++ b/SEG1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carrion Chea Michael">
     <link rel="shortcut icon" href="./Img/Logo.png" type="image/x-icon">
-    <title>Historias Publicadas - FutureGo</title>
+    <title>Historias Publicadas</title>
     <link rel="stylesheet" href="./CSS/Styles.css">
     <style>
         body {
@@ -76,7 +76,7 @@
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <img src="Img/logo.png" alt="Logo de FutureGo" class="logo">
+                <img src="Img/Logo.png" alt="Logo de FutureGo" class="logo">
                 <h1>FutureGo</h1>
             </div>
             <nav>
