--- a/SEG2.html
+++ b/SEG2.html
@@ -100,7 +100,7 @@
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <img src="Img/logo.png" alt="Logo de FutureGo" class="logo">
+                <img src="Img/Logo.png" alt="Logo de FutureGo" class="logo">
                 <h1>FutureGo</h1>
             </div>
             <nav>
