--- a/informe.html
+++ b/informe.html
@@ -88,7 +88,7 @@
         <header>
             <div class="header-content">
                 <div class="logo-container">
-                    <img src="Img/logo.png" alt="Logo de FutureGo" class="logo">
+                    <img src="Img/Logo.png" alt="Logo de FutureGo" class="logo">
                     <h1>FutureGo</h1>
                 </div>
                 <nav>
@@ -138,7 +138,7 @@
                                 mundo.
                             </p>
                         <div id="datos">
-                            <img id="imagen1" onmouseenter="cambiar(this)" onmouseout="recuperar(this)"  class="elemen" src="img/impacto.png" alt="crowdfunding impacto social "
+                            <img id="imagen1" onmouseenter="cambiar(this)" onmouseout="recuperar(this)"  class="elemen" src="Img/impacto.png" alt="crowdfunding impacto social "
                             style="border: none;">
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                 los estudiantes.
                             </li>
                         </m>
-                        <img class="elemen" src="img/educacion.jpg" alt="niños estudiando"
+                        <img class="elemen" src="Img/educacion.jpg" alt="niños estudiando"
                          style="border: none;"
                         >
                     </div>
@@ -187,7 +187,7 @@
                                 atención médica materna.
                             </li>
                         </m>
-                        <img class="elemen" src="img/salud_materno_infantil.png" alt="salud materno infantil"
+                        <img class="elemen" src="Img/salud_materno_infantil.png" alt="salud materno infantil"
                          style="border: none;"
                         >
                         </div>
