--- a/informe.html
+++ b/informe.html
@@ -74,12 +74,12 @@
         <script>
             function cambiar(imagen){
                 let img = document.querySelector("#datos img");
-                img.src="img/crowdfunding.png";
+                img.src="Img/crowdfunding.png";
             }
     
             function recuperar(imagen){
                 let img = document.querySelector("#datos img");
-                img.src="img/impacto.png";
+                img.src="Img/impacto.png";
             }
         </script>
     
